fix(i18n): URI fix